Clean up: Pass JSHint and update QUnit HTML.
git-svn-id: https://jquery-json.googlecode.com/svn/trunk@49 2d20be7f-194b-0410-8e24-930166456270

--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
+	<meta charset="UTF-8">
+	<title>jQuery JSON Test Suite</title>
 	<!-- Libs -->
 	<script src="../libs/jquery.js"></script>
 	<script src="../libs/jquery.qunit.js"></script>
@@ -48,9 +50,6 @@
 	</script>
 </head>
 <body>
-	<h1 id="qunit-header">jQuery JSON Test Suite</h1>
-	<h2 id="qunit-banner"></h2>
-	<div id="qunit-testrunner-toolbar"></div>
-	<h2 id="qunit-userAgent"></h2>
-	<ol id="qunit-tests"></ol></body>
+	<div id="qunit"></div>
+</body>
 </html>
